4.00002 2013-02-23
    - Removed Test::NoWarnings to accommodate HTTP::Request::Common 6.03
    - Added method twitter_error_code to Net::Twitter::Error

4.00001 2013-02-21
    - First general release with Twitter API v1.1 support
    - Twitter::Manual::MigratingToV1_1

4.00000_03 2013-02-19
    - Fixed: needed skip directives for dzil's AutoPrereqs plugin
    - Stripped version numbers---let dzil put them in

4.00000_02 2013-02-19
    - use Dist::Zilla instead of Module::Install

4.00000_01 2013-01-28
    - Added Twitter API version 1.1 support

3.18004 2012-10-15
    - Allow extra parameters to get_auth*_url methods (this accommodates
      Twitter's optional force_login and screen_name parameters to those
      endpoints.

3.18003 2012-06-27
    - Use path statuses/mentions, not statuses/replies

3.18002 2012-04-24
    - added API method subscriptions; list_subscriptions is now
      all_subscriptions with alias list_subscriptions
    - deprecated TwitterVision API support
    - added API method members_destroy_all with alias remove_list_members
    - added deprecation warning for 'trends'; calls trends_location(1), instead

3.18001 2011-09-29
    - fixed: AutoCursor:
        - no behavior change when user passes "cursor" arg
        - work with InflateObjects trait
    - synthetic ags use (-) prefix: -authenticate, -since, -legacy_lists_api
    - Replaced JSON::Any with JSON
    - documented new arguments for friendship_exists

3.18000_01 2011-09-21
    - added update_with_media (Allen Haim)
    - added get_privacy_policy and get_tos API methods
    - added get_languages and get_settings API methods
    - added contributors and contributees API methods
    - added geo_search, geo_search, similar_places, and add_place API methods
    - friends/followers API methods deprecated
    - implemented the *new* Lists API in the API::REST trait
    - replaced MX:MultiInitArg::Trait with MX:Aliases (Justin Hunter)